--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -9,5 +9,6 @@
 * xref:image3-overview.adoc[] 
 ** xref:image3-petition.adoc[]
 ** xref:image3-4-report-and-response.adoc[]
-* *TODO:* Images 4-11
+* xref:image5-main-txt.adoc[]
+* *TODO:* Images 5-11
 * xref:image11-12.adoc[]
