--- a/modules/1237/pages/image5-main-txt.adoc
+++ b/modules/1237/pages/image5-main-txt.adoc
@@ -1,4 +1,5 @@
 = Image 5 Under Development
+:page-role: wide
 
 image::05-right-page.png[link=self]
 
@@ -83,6 +84,7 @@ to the officials at Bückeburg
 ____
 |===
 
+[role="section-narrow"]
 === Summary of Header Line
 
 [cols="1,3", options="header"]
@@ -100,6 +102,7 @@ ____
 | Addressee: the civil officials stationed in *Bückeburg*, who are responsible for executing or communicating the contents of the rescript.
 |===
 
+[role="section-narrow"]
 === Glossary of Terms
 
 ad nr:: Latin abbreviation for *ad numerum*, meaning "to the number." Used in file routing and administrative referencing. It indicates the document concerns or belongs to a case or entry listed under a specific file number.
