--- a/modules/1237/pages/image5-main-txt.adoc
+++ b/modules/1237/pages/image5-main-txt.adoc
@@ -49,34 +49,36 @@ ____
 |
 [verse]
 ____
-To No. Cammer 53. S. S.                     3
-Draft chamber rescript
-to the officials at Bückeburg
+To No. Chamber 53. S. S.                     3
+Draft of chamber rescript
+to the officials in Bückeburg
 
                             V. G. G.
                             We have resolved, based on your
-                            report submitted on February 27
-                            of this year, that the
+                            report submitted on the 27th of
+                            February of this year, that the
                             Brücksitzer Krückeberg, No. 10,
-                            at Berenbusch, be assigned the
-                            requested plot located in the village
-                            street there next to his garden
-                            for the purpose of expansion,
+                            in Berenbusch be assigned the
+                            requested plot located on the
+                            village street there next to his
+                            garden for its enlargement,
                             under the condition
                             that the willows and poplars
-                            currently on the site are
-                            sold by our forestry department,
-        Espp: Schwarze
+                            currently on the site be sold
+                            by our forestry department,
+
+  [Espp: Schwarze — likely clerk's name]
+
                             and that Colon Krückeberg be
-                            obligated to commit himself to
-                            replanting three saplings
-                            at another location in the forest
+                            obligated to undertake, at
+                            another place in the forest,
+                            the planting of three saplings
                             for every poplar or willow tree
-                            that is to be felled.
+                            to be felled.
                             You are therefore to inform him
-                            of this and that for each square
-        ‡solchergestalt
-                            rod of the land to be ‡ transferred
+                            of this, and that for the square
+  ‡in such manner
+                            rod of land to be ‡ transferred
                             to him, he is to pay
                             24 Mariengroschen,
                             and when he has
