--- a/modules/1237/pages/image5-main-txt.adoc
+++ b/modules/1237/pages/image5-main-txt.adoc
@@ -40,11 +40,12 @@ Espp: Schwarze
                             Ihr habt daher demselben dieses
                             und daß er für die Quadrat:
                             Rute des ihm‡ zu überlaßenden
-‡solchergestalt
                             Platzes 24. Mariengroschen
                             zuzahlen habe, bekannt zu
                             machen, und wenn er sich
                             hirzu
+
+‡solchergestalt
 ____
 |[verse]
 ____
@@ -65,7 +66,8 @@ to the officials in Bückeburg
                             that the willows and poplars
                             currently on the site be sold
                             by our forestry department,
-[Espp: Schwarze — likely clerk's name]
+[Espp: Schwarze —
+ likely clerk's name]
                             and that Colon Krückeberg be
                             obligated to undertake, at
                             another place in the forest,
@@ -75,10 +77,11 @@ to the officials in Bückeburg
                             You are therefore to inform him
                             of this, and that for each square
                             rod‡ of land to be transferred to him,
-‡under these terms (accordinly)
                             he is to pay 24 Mariengroschen,
                             and when he has
                             agreed to this
+
+‡under these terms (accordinly)
 ____
 |===
 
