--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -4,8 +4,8 @@
 * xref:image1.adoc[]
 * xref:image2-intro.adoc[]
 ** xref:image2-forestry-report.adoc[]
-** xref:image2-honorifics.adoc[]
-** xref:image2-bottom-text.adoc[]
+//** xref:image2-honorifics.adoc[]
+** xref:image2-written-request.adoc[]
 * xref:image3-overview.adoc[] 
 ** xref:image3-petition.adoc[]
 ** xref:image3-4-report-and-response.adoc[]
