--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -6,6 +6,7 @@
 ** xref:image2-forestry-report.adoc[]
 //** xref:image2-honorifics.adoc[]
 ** xref:image2-written-request.adoc[]
+** xref:image2-admin-note.adoc[]
 * xref:image3-overview.adoc[] 
 ** xref:image3-petition.adoc[]
 ** xref:image3-4-report-and-response.adoc[]
