--- a/modules/1237/pages/image3-overview.adoc
+++ b/modules/1237/pages/image3-overview.adoc
@@ -3,8 +3,8 @@
 
 [cols="1a,1a",frame=none,grid=none,options="noheader"]
 |===
-|image::03-left-page.jpg[role="image-pair-img"]
-|image::03-right-page.jpg[role="image-pair-img"]
+|image::03-left-page.jpg[role=image-pair]
+|image::03-right-page.jpg[role=image-pair]
 |===
 
 [role="section-narrow"]
