--- a/modules/1237/pages/image3-petition.adoc
+++ b/modules/1237/pages/image3-petition.adoc
@@ -3,7 +3,7 @@
 
 == Petition
 
-The petition of Jobst Heinrich Krückeberg appears on the left page of image 3. The petition was accompanied by a
+The petition of Jobst Heinrich Krückeberg appears on the left page of image 3. It accompanied the
 Land Assignment Report. It requests:
 
 * To purchase (käuflich zu überlassen) the corner of land (jene Ecke) for a fair price (einen billigen Preis).
