--- a/modules/1237/pages/image2-written-request.adoc
+++ b/modules/1237/pages/image2-written-request.adoc
@@ -3,26 +3,25 @@
 
 == Salutation
 
-The text below appears to the right of the main text of the forestry report.
-It is written much smaller. It is the formal salutation addressed to reigning
-Fürstin(princess, female ruler) and possibly a Count, who is the recepient of
+The text below appears to the right of the main text of the forestry report
+and is written much smaller. It is a formal salutation addressed to the reigning
+Fürstin (princess, female ruler) and possibly a Count, who is the recepient of
 written request that appears below the forestry report. 
 
 image::002-2-honorifics.png[link=self]
 
 == Request
 
-The written request itself that is addressed to the Fürstin (and more likely read
-by an governmental official) appears below the forestry report. Based on its content
-and style, it is almost certainly written by (or on behalf of) Jobst Heinrcih Krückeberg
+The request itself appears below the forestry report. Based on its content
+and style, it was almost certainly written by or on behalf of Jobst Heinrcih Krückeberg
 (or dictated by him and written in his name). Notice these expressions:
 
 * “Nahe an *meinem* Garten …” (Close to my garden)
 * “… so wünschte *ich* dieselbe gern urbar zu machen …” (I would like to bring it under cultivation)
 * “… an *mich* zu bringen.” (to acquire it for myself)
 
-Thus, this is clearly a first-person petition rather than administrative note
-by the Amt (office, department).
+Itis clearly a first-person petition rather than administrative note by the Amt (office,
+department).
 
 image::002-1-bottom-small-text.png[link=self]
 
