--- a/modules/1237/pages/image3-overview.adoc
+++ b/modules/1237/pages/image3-overview.adoc
@@ -15,9 +15,12 @@ Jobst Heinrich Krückeberg (left page) ^|Land Assignment Report (right page)
 [role="section-narrow"]
 == Overview
 
+The petition of Jobst Heinrich Krückeberg appears on the left page of image 3. It accompanied
+the Land Assignment Report on the right page.
+
 === Petition of Jobst Heinrich Krückeberg
 
-The petition of Jobst Heinrich Krückeberg appears on the left page of image 3. It requests:
+The petition of Jobst Heinrich Krückeberg requests:
 
 * To purchase the corner of land for a fair price.
 
@@ -27,9 +30,9 @@ The petition of Jobst Heinrich Krückeberg appears on the left page of image 3. 
 * Hochgräflichen Gnaden*).
 
 The personal petiton of Jobst Heinrich Krückeberg was sent by the *Ämter Bückeburg und Arensburg* (local
-adminstrative offices of Bückeburg and Arenburg) along with their report to the *Gräflich vormundschaftliche
-Cammer* (Countly Guardianship Chamber), which was the higher fiscal and administrative authority for land
-and estate matters.
+adminstrative offices of Bückeburg and Arenburg) along with their Land Assignment report to the *Gräflich
+vormundschaftliche Cammer* (Countly Guardianship Chamber), which was the higher fiscal and administrative
+authority for land and estate matters.
 
 === The Land Assignment Report
 
